Added attachmentEventId tu OcrRequest
