# src/main/java/it/pagopa/pn/papertracker/middleware/dao/dynamo/entity/OcrRequest.java
@@ -14,14 +14,18 @@ public class OcrRequest {
     public static final String COL_REQUEST_TIMESTAMP = "requestTimestamp";
     public static final String COL_RESPONSE_TIMESTAMP = "responseTimestamp";
     public static final String COL_DOCUMENT_TYPE = "documentType";
-    public static final String COL_EVENT_ID = "eventId";
+    public static final String COL_FINAL_EVENT_ID = "finalEventId";
+    public static final String COL_ATTACHMENT_EVENT_ID = "attachmentEventId";
     public static final String COL_URI = "uri";
 
     @Getter(onMethod = @__({@DynamoDbAttribute(COL_DOCUMENT_TYPE)}))
     private String documentType;
 
-    @Getter(onMethod = @__({@DynamoDbAttribute(COL_EVENT_ID)}))
-    private String eventId;
+    @Getter(onMethod = @__({@DynamoDbAttribute(COL_FINAL_EVENT_ID)}))
+    private String finalEventId;
+
+    @Getter(onMethod = @__({@DynamoDbAttribute(COL_ATTACHMENT_EVENT_ID)}))
+    private String attachmentEventId;
 
     @Getter(onMethod = @__({@DynamoDbAttribute(COL_RESPONSE_TIMESTAMP)}))
     private Instant responseTimestamp;
